# PySDL3-wasm

./: main.py  pyproject.toml
sdl3/: __init__.py
