[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PySDL3"
description = "A Python wrapper for SDL3 wasm."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "pygame-web", email = "pgw@example.com"}
]
dependencies = ["packaging","micropip","platform_wasm","microfix"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.urls]
Repository = "https://github.com/pygame-web/PySDL3-wasm"
Issues = "https://github.com/pygame-web/PySDL3-wasm/issues"

[tool.setuptools]
packages = ["sdl3"]
include-package-data = true


[tool.setuptools.package-data]
"sdl3" = ["*.py", "*.so"]

[tool.setuptools.dynamic]
version = {attr = "sdl3.__version__"}

[bdist_wheel]
py-limited-api = "cp311"
